--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
-
+.holder{
+	display:flex;
+	width:300px;
+	flex-flow:row wrap;
+	justify-content:center;
+}
+.inside{
+	width:50px;
+	height:50px;
+}
+.three{
+	background-color:green;
+}
+.two{
+	background-color:blue;
+}
+.one{
+	background-color:red;
+}
 /* Your CSS Code here. */
